--- a/index.html
+++ b/index.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
-    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name" value="fleurs">
 
-    <input type="text" id="mySearch"  placeholder="Search for names.." title="Type in a name" value="fleurs">
-    <button onclick="getFetch()">Test</button>
-    <div id="app">
-        
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <input type="text" id="myTags" onkeyup="searchTag()" placeholder="Search by tags..">
+            </div>
+            <div class="col-md-4">
+                <input type="text" id="mySearch" onkeyup='getFetch()' placeholder="Search by names.." value="">
+
+            </div>
+            <div class="col-md-4">
+                <form id="langs">
+                    <select name="dropdown" id="lan" onclick="getFetch()">
+                        <option value="fr" selected>Français</option>
+                        <option value="en">Anglais</option>
+                        <option value="ru">Russe</option>
+                        <option value="es">Espagnol</option>
+                        <option value="ja">Japonais</option>
+                    </select>        
+                </form>
+            </div>
+        </div>
     </div>
 
+
     
+    <div id="app"></div>
 </body>
 <script src="index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+
 </html>
